2002-01-05  Werner Koch  <wk@gnupg.org>

	* t-crl-parser.c: New.

2001-12-18  Werner Koch  <wk@gnupg.org>

	* cert-basic.c (main): Depend tests on $srcdir.

2001-12-17  Werner Koch  <wk@gnupg.org>

	* cert-basic.c, t-cms-parser.c (print_integer): Renamed to
	(print_sexp): this and changed all callers.
	

 Copyright 2001, 2002 g10 Code GmbH

 This file is free software; as a special exception the author gives
 unlimited permission to copy and/or distribute it, with or without
 modifications, as long as this notice is preserved.

 This file is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

